# rust-console-chat-gpt

./: .gitignore  Cargo.toml  README.md  config.toml.sample
src/: features.rs  lib.rs  main.rs  styling.rs  utils.rs
src/features/: calculate_costs.rs  edit_latest.rs  exit_chat.rs  features.rs  flush_chat.rs  format_request.rs  help_info.rs  load_from_file.rs  mod.rs  save_chat.rs
src/helpers/: api_helpers.rs  config_helpers.rs  mod.rs  model_helper.rs  model_helpers.rs  role_helpers.rs  temperature_helpers.rs
src/helpers/utils/: check_dir.rs  flush_lines.rs  fs_helpers.rs  mod.rs  sysutils.rs  toml_helpers.rs  user_input.rs
src/models/: api.rs  config.rs  enums.rs  mod.rs
src/styling/: mod.rs  styling.rs
