[package]
name = "rust-console-chat-gpt"
version = "0.1.0"
edition = "2021"
authors = ["Stefan"]
license = "MIT OR Apache-2.0"
description = "Rust CLI for OpenAI Chat API"
readme = "README.md"
homepage = "https://github.com/amidabuddha/rust-console-chat-gpt"
repository = "https://github.com/amidabuddha/rust-console-chat-gpt"
keywords = ["cli", "chat", "gpt"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]