[package]
name = "rust-console-chat-gpt"
version = "0.1.3"
edition = "2021"
authors = ["Stefan"]
license = "MIT OR Apache-2.0"
description = "Rust CLI for OpenAI Chat API"
readme = "README.md"
homepage = "https://github.com/amidabuddha/rust-console-chat-gpt"
repository = "https://github.com/amidabuddha/rust-console-chat-gpt"
keywords = ["cli", "chat", "gpt"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.6"
chrono = "0.4.26"
colored = "2.0.4"
syntect = "5.1.0"
dialoguer = "0.10.4"
regex = "1.9.5"
spinners = "4.1.0"
clearscreen = "2.0.1"
